faq 및 모바일 수정

--- a/mypage.html
+++ b/mypage.html
@@ -128,7 +128,7 @@
           </div>
         </div>
         <div class="inner">
-          <h2 class="title">개인정보</h2>
+          <h2 class="title blin">MY PAGE</h2>
           <form action="">
             <div class="block">
               <p>닉네임</p>
