헤더 및 인덱스 수정

--- a/index.html
+++ b/index.html
@@ -130,14 +130,15 @@
         </div>
       </section>
       <section class="slider">
-        <div><img src="img/main1.png" alt="" /></div>
+        <div><img src="img/main1.jpg" alt="" /></div>
         <div><img src="img/main2.jpg" alt="" /></div>
-        <div><img src="img/main3.jpg" alt="" /></div>
-        <div><img src="img/main4.jpg" alt="" /></div>
       </section>
       <section class="faq">
         <div class="inner">
-          <h2 class="title">자주하는 질문</h2>
+          <div class="text_box">
+            <h2 class="title">자주하는 질문</h2>
+            <a href="faq.html">더보기 <i class="fa-solid fa-angle-right"></i></a>
+          </div>
           <ul class="tab">
             <li data-tab="tab1" class="active">척추1</li>
             <li data-tab="tab2">척추2</li>
