--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <div class="contents">
             <div class="list tab1 active">
               <div class="qna_list">
-                <div class="que">
+                <div class="que active">
                   <b class="blin">Q</b>
                   <p>tab1 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
                   <i class="fa-solid fa-angle-down"></i>
